Downgrade to Java 17
Make Mimir require Java 17 and not 21.